Restored z-order to ensure it's above content on mobile.

--- a/peruse.css
+++ b/peruse.css
@@ -126,7 +126,7 @@ ol ol ol li {
 		left: 0;
 		right: 0;
 		width: auto;
-		z-index: -1; /* Put it below everything to avoid overlapping content */
+		z-index: 0; /* Put it below everything to avoid overlapping content */
 		padding: 1em;
 		border-top: 1px solid lightGray;
 		text-align: left;
